--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron jumbotron-fluid text-center">
             <h1>{{title}}</h1>
             <p>Served with ❤️ by express and Node.js</p>
         </div>
