--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 {{>head }}
-    <div>
+    <div class="container">
         <table class="table table-hover">
             <thead>
                 <tr class="row">
