--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles.css">
     <title>{{title}}</title>
 </head>
 <body>
-    <div class="container">
-        <div class="jumbotron jumbotron-fluid text-center">
+    <div>
+        <div class="jumbotron text-center container-fluid">
             <h1>{{title}}</h1>
             <p>Served with ❤️ by express and Node.js</p>
         </div>
