button text change

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
             <thead>
                 <tr class="row">
                     <th class="col">File</th>
-                    <th class="col">Download</th>
+                    <th class="col"></th>
                 </tr>
             </thead>
 
