--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -12,5 +12,5 @@
     <div>
         <div class="jumbotron text-center container-fluid">
             <h1>{{title}}</h1>
-            <p>Served with ❤️ by express and Node.js</p>
+            <p>Served with ❤️ by Express and Node.js</p>
         </div>
